--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -1,59 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        style="@style/container_master">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+    <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            style="@style/container_master">
 
 
-    <ImageView
-            style="@style/banner"/>
+        <ImageView
+                style="@style/banner" android:contentDescription="TODO"/>
 
-    <View style="@style/divider"/>
-
-    <TextView
-            style="@style/header_title"
-            android:drawableStart="@drawable/analysis_icon"
-            android:text="Sugestão de Abastecimento"/>
-
-    <View style="@style/divider"/>
-
-    <TextView
-            style="@style/header_title"
-            tools:text="Etanol"
-            android:textSize="48sp"
-            android:gravity="center" android:id="@+id/tvSuggestion"/>
-
-
-    <View style="@style/divider"/>
-
-    <TextView
-            android:drawableStart="@drawable/coins_icon"
-            android:text="Gasto RS/Km"
-            style="@style/header_title"/>
-
-    <View style="@style/divider"/>
-
-    <LinearLayout style="@style/container_row">
+        <View style="@style/divider"/>
 
         <TextView
-                style="@style/value_spent_footer"
-                tools:text="0.30" android:id="@+id/etGasAverageResult"/>
+                style="@style/header_title"
+                android:drawableStart="@drawable/analysis_icon"
+                android:text="Sugestão de Abastecimento"/>
+
+        <View style="@style/divider"/>
 
         <TextView
-                style="@style/value_spent_footer"
-                tools:text="0.30" android:id="@+id/tvEthanolAverageResult"/>
+                style="@style/header_title"
+                tools:text="Etanol"
+                android:textSize="48sp"
+                android:gravity="center" android:id="@+id/tvSuggestion"/>
+
+        <TextView android:id="@+id/tvFuelRatio"
+                  style="@style/header_subtitle"
+                  android:text="@string/label_ratio_fuel"
+                  android:textStyle="normal"
+                  android:gravity="center"/>
+
+        <View style="@style/divider"/>
+
+        <TextView
+                android:drawableStart="@drawable/coins_icon"
+                android:text="Gasto RS/Km"
+                style="@style/header_title"/>
+
+        <View style="@style/divider"/>
+
+        <LinearLayout style="@style/container_row">
+
+            <TextView
+                    style="@style/value_spent_footer"
+                    tools:text="0.30" android:id="@+id/tvGasAverageResult"/>
+
+            <TextView
+                    style="@style/value_spent_footer"
+                    tools:text="0.30" android:id="@+id/tvEthanolAverageResult"/>
+        </LinearLayout>
+
+        <LinearLayout style="@style/container_row">
+
+            <TextView
+                    style="@style/label_spent_footer"
+                    android:text="Gasolina"
+            />
+
+            <TextView
+                    style="@style/label_spent_footer"
+                    android:text="Etanol"/>
+        </LinearLayout>
+
     </LinearLayout>
 
-    <LinearLayout style="@style/container_row">
-
-        <TextView
-                style="@style/label_spent_footer"
-                android:text="Gasolina"
-        />
-
-        <TextView
-                style="@style/label_spent_footer"
-                android:text="Etanol"/>
-    </LinearLayout>
-
-</LinearLayout>
+</ScrollView>
